feat: move Precision digital human into script director
